force-app/main/default/objects/Subscription_Pricing__c/Subscription_Pricing__c.object-meta.xml
<CustomObject>
    <label>Subscription Pricing</label>
    <nameField>
        <label>Product Name (Sub)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>