force-app/main/default/objects/Subscription_Pricing__c/fields/Price_Per_10000_Subs__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_10000_Subs__c</fullName>
    <label>Price Per 10000 Subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>