force-app/main/default/objects/Subscription_Pricing__c/fields/Support_SKU__c.field-meta.xml
<CustomField>
    <fullName>Support_SKU__c</fullName>
    <label>Support SKU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>