force-app/main/default/objects/Subscription_Pricing__c/fields/Tier_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Tier_Minimum__c</fullName>
    <label>Tier Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>